Somy styling done. Javascript calls done. Scroll function done.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Fintros Test</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Hello World</h1>
+      <nav class="navbar navbar-light hackernavbar">
+        <span class="navbar-brand">HackerNews Demo Site</span>
+      </nav>
+      <ol class="stories" id="stories">
+
+
+      </ol>
   </body>
 </html>
