Added viewpoint which got wiped when fixing a commit.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width" />
     <title>Fintros Test</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -12,8 +13,6 @@
         <span class="navbar-brand">HackerNews Demo Site</span>
       </nav>
       <ol class="stories" id="stories">
-
-
-      </ol>
+      </ul>
   </body>
 </html>
